Bug 644546 - crash [@ nsAddrDatabase::CreateCard(nsIMdbRow*, unsigned int, nsIAbCard**)] when viewing a replicated/downloaded LDAP directory in offline mode.; r=bienvenu